--- a/src/View/OtelEkle.fxml
+++ b/src/View/OtelEkle.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -34,6 +35,8 @@
                   <Insets left="2.0" />
                </padding>
             </VBox>
+            <DatePicker fx:id="perStart" layoutX="383.0" layoutY="198.0" prefHeight="25.0" prefWidth="150.0" promptText="Yaz Başlangıcı" />
+            <DatePicker fx:id="perEnd" layoutX="383.0" layoutY="244.0" prefHeight="25.0" prefWidth="149.0" promptText="Yaz Sonu" />
          </children>
       </Pane>
       <Pane layoutX="631.0" layoutY="26.0" prefHeight="356.0" prefWidth="234.0" style="-fx-background-color: #9E3F62; -fx-background-radius: 15px;">
