--- a/src/View/Anasayfa.fxml
+++ b/src/View/Anasayfa.fxml
@@ -8,59 +8,85 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="480.0" prefWidth="880.0" style="-fx-background-color: #2A3950;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Anasayfa">
-   <children>
-      <Pane layoutX="20.0" layoutY="67.0" prefHeight="300.0" prefWidth="840.0" style="-fx-background-color: #41436A; -fx-background-radius: 25;">
+
+<BorderPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Anasayfa">
+   <center>
+      <AnchorPane style="-fx-background-color: #F2F8FF;">
          <children>
-            <Label layoutX="20.0" layoutY="17.0" style="-fx-text-fill: #fff;" text="Otel Ara">
+            <AnchorPane layoutX="72.0" layoutY="121.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="194.0" prefWidth="558.0" AnchorPane.leftAnchor="72.0" AnchorPane.rightAnchor="90.39999999999998">
+               <children>
+                  <TextField fx:id="cityField" layoutX="14.0" layoutY="69.0" prefHeight="36.0" prefWidth="162.0" promptText="Şehir" style="-fx-background-color: #fff; -fx-border-color: #0061FF;" />
+                  <Label layoutX="14.0" layoutY="20.0" text="Otel Ara">
+                     <font>
+                        <Font name="SansSerif Bold" size="24.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="hotelSearchButton" layoutX="381.0" layoutY="124.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="162.0" style="-fx-text-fill: #fff; -fx-background-color: #0061FF;" text="Ara" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="27.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Icons/icons8_telegram_app_32px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <DatePicker fx:id="dateStart" layoutX="198.0" layoutY="69.0" prefHeight="36.0" prefWidth="162.0" style="-fx-background-color: #fff; -fx-border-color: #0061FF;" />
+                  <DatePicker fx:id="dateEnd" layoutX="381.0" layoutY="69.0" prefHeight="36.0" prefWidth="162.0" style="-fx-background-color: #fff; -fx-border-color: #0061FF;" />
+                  <ComboBox fx:id="customerCount" layoutX="14.0" layoutY="125.0" prefHeight="36.0" prefWidth="162.0" style="-fx-background-color: #fff; -fx-border-color: #0061FF;" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="89.0" layoutY="473.0" prefHeight="178.0" prefWidth="242.0" style="-fx-background-color: #fff; -fx-background-radius: 10;">
+               <children>
+                  <Button fx:id="listReservations" layoutX="147.0" layoutY="133.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="86.0" style="-fx-text-fill: #fff; -fx-background-color: #0061FF;" text="Görüntüle" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Button>
+                  <Label layoutX="14.0" layoutY="14.0" text="Rezervazyonlar">
+                     <font>
+                        <Font name="SansSerif Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <Label layoutX="89.0" layoutY="52.0" style="-fx-text-fill: #2E3F6B;" text="Patika Turizm Acentesi">
                <font>
                   <Font name="SansSerif Bold" size="24.0" />
                </font>
             </Label>
-            <Button fx:id="hotelSearchButton" layoutX="586.0" layoutY="160.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="246.0" style="-fx-background-radius: 15px; -fx-text-fill: #fff; -fx-background-color: FF8A64;" text="Ara" wrapText="true">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="27.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Icons/icons8_telegram_app_32px.png" />
-                     </image>
-                  </ImageView>
-               </graphic></Button>
-            <TextField fx:id="cityField" layoutX="20.0" layoutY="67.0" prefHeight="36.0" prefWidth="246.0" promptText="Şehir" />
-            <DatePicker fx:id="dateStart" layoutX="304.0" layoutY="67.0" prefHeight="36.0" prefWidth="246.0" />
-            <DatePicker fx:id="dateEnd" layoutX="586.0" layoutY="67.0" prefHeight="36.0" prefWidth="246.0" />
-            <ComboBox fx:id="customerCount" layoutX="17.0" layoutY="171.0" prefHeight="36.0" prefWidth="246.0" style="-fx-background-color: #fff;" />
+            <Pane layoutX="373.0" layoutY="473.0" prefHeight="178.0" prefWidth="242.0" style="-fx-background-color: #fff; -fx-background-radius: 10;">
+               <children>
+                  <Label layoutX="14.0" layoutY="14.0" text="Oteller">
+                     <font>
+                        <Font name="SansSerif Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="hotelAddButton" layoutX="159.0" layoutY="142.0" mnemonicParsing="false" style="-fx-background-color: #0061FF; -fx-text-fill: #fff;" text="Otel Ekle">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+            </Pane>
          </children>
-      </Pane>
-      <Pane layoutX="20.0" layoutY="400.0" prefHeight="60.0" prefWidth="840.0" style="-fx-background-color: #F54768; -fx-background-radius: 25;">
+      </AnchorPane>
+   </center>
+   <left>
+      <AnchorPane style="-fx-background-color: #fff;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="hotelAddButton" layoutX="763.0" layoutY="18.0" mnemonicParsing="false" style="-fx-background-radius: 15px; -fx-background-color: #FF9677; -fx-text-fill: #fff;" text="Otel Ekle" />
-            <Label layoutX="669.0" layoutY="20.0" style="-fx-text-fill: #fff;" text="Otel Ekle">
-               <font>
-                  <Font name="SansSerif Bold" size="18.0" />
-               </font>
-            </Label>
-            <Button fx:id="listReservations" layoutX="169.0" layoutY="12.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="93.0" style="-fx-background-radius: 15px; -fx-text-fill: #fff; -fx-background-color: FF8A64;" text="Görüntüle" wrapText="true">
-               <font>
-                  <Font name="System Bold" size="14.0" />
-               </font>
-            </Button>
-            <Label layoutX="14.0" layoutY="20.0" style="-fx-text-fill: #fff;" text="Rezervazyonlar">
-               <font>
-                  <Font name="SansSerif Bold" size="18.0" />
-               </font>
-            </Label>
+            <ImageView fitHeight="720.0" fitWidth="713.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <image>
+                  <Image url="@../../../../Desktop/TourismAgency/src/Icons/sdf.jpg" />
+               </image>
+            </ImageView>
          </children>
-      </Pane>
-      <Label layoutX="40.0" layoutY="20.0" style="-fx-text-fill: #fff;" text="Patika Turizm Acentesi">
-         <font>
-            <Font name="SansSerif Bold" size="24.0" />
-         </font>
-      </Label>
-   </children>
-</AnchorPane>
+      </AnchorPane>
+   </left>
+</BorderPane>
