--- a/src/View/Anasayfa.fxml
+++ b/src/View/Anasayfa.fxml
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Anasayfa">
    <center>
       <AnchorPane style="-fx-background-color: #F2F8FF;">
@@ -20,7 +19,7 @@
             <AnchorPane layoutX="72.0" layoutY="121.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="194.0" prefWidth="558.0" AnchorPane.leftAnchor="72.0" AnchorPane.rightAnchor="90.39999999999998">
                <children>
                   <TextField fx:id="cityField" layoutX="14.0" layoutY="69.0" prefHeight="36.0" prefWidth="162.0" promptText="Şehir" style="-fx-background-color: #fff; -fx-border-color: #0061FF;" />
-                  <Label layoutX="14.0" layoutY="20.0" text="Otel Ara">
+                  <Label layoutX="14.0" layoutY="20.0" style="-fx-text-fill: #2E3F6B;" text="Otel Ara">
                      <font>
                         <Font name="SansSerif Bold" size="24.0" />
                      </font>
