--- a/src/View/resList.css
+++ b/src/View/resList.css
@@ -1,5 +1,5 @@
 .pane-background {
-    -fx-background-color: #2a3950;
+    -fx-background-color: #F2F8FF;
 }
 .table-view {
     -fx-background-color: transparent;
@@ -73,4 +73,14 @@
 .pane-style{
     -fx-background-color: #fff;
     -fx-background-radius: 15px;
+}
+.button{
+    -fx-background-color: #fff;
+    -fx-text-fill: #000;
+}
+.button:hover {
+    -fx-box-shadow: #383838;
+    -fx-effect: dropshadow(three-pass-box, #0061FF, 10, 0, 0, 0);;
+    -fx-translate-y : 1.2;
+    
 }
