--- a/src/View/Anasayfa.fxml
+++ b/src/View/Anasayfa.fxml
@@ -13,10 +13,21 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Anasayfa">
-   <center>
-      <AnchorPane style="-fx-background-color: #F2F8FF;">
+   <left>
+      <AnchorPane prefHeight="732.0" prefWidth="611.0" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane layoutX="72.0" layoutY="121.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="194.0" prefWidth="558.0" AnchorPane.leftAnchor="72.0" AnchorPane.rightAnchor="90.39999999999998">
+            <ImageView fitHeight="750.0" fitWidth="975.0" layoutX="-166.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="-160.0" AnchorPane.rightAnchor="-184.0" AnchorPane.topAnchor="0.0">
+               <image>
+                  <Image url="@../Icons/f2aaf1b36b2567123cec8ce8859a05623.jpg" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+   </left>
+   <center>
+      <AnchorPane prefHeight="732.0" prefWidth="622.0" style="-fx-background-color: #F2F8FF;">
+         <children>
+            <AnchorPane layoutX="52.0" layoutY="123.0" nodeOrientation="LEFT_TO_RIGHT">
                <children>
                   <TextField fx:id="cityField" layoutX="14.0" layoutY="69.0" prefHeight="36.0" prefWidth="162.0" promptText="Şehir" style="-fx-background-color: #fff; -fx-border-color: #0061FF;" />
                   <Label layoutX="14.0" layoutY="20.0" style="-fx-text-fill: #2E3F6B;" text="Otel Ara">
@@ -41,7 +52,7 @@
                   <ComboBox fx:id="customerCount" layoutX="14.0" layoutY="125.0" prefHeight="36.0" prefWidth="162.0" style="-fx-background-color: #fff; -fx-border-color: #0061FF;" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="89.0" layoutY="473.0" prefHeight="178.0" prefWidth="242.0" style="-fx-background-color: #fff; -fx-background-radius: 10;">
+            <AnchorPane layoutX="60.0" layoutY="473.0" prefHeight="178.0" prefWidth="242.0" style="-fx-background-color: #fff; -fx-background-radius: 10;">
                <children>
                   <Button fx:id="listReservations" layoutX="147.0" layoutY="133.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="86.0" style="-fx-text-fill: #fff; -fx-background-color: #0061FF;" text="Görüntüle" wrapText="true">
                      <font>
@@ -55,12 +66,12 @@
                   </Label>
                </children>
             </AnchorPane>
-            <Label layoutX="89.0" layoutY="52.0" style="-fx-text-fill: #2E3F6B;" text="Patika Turizm Acentesi">
+            <Label layoutX="60.0" layoutY="51.0" style="-fx-text-fill: #2E3F6B;" text="Patika Turizm Acentesi">
                <font>
                   <Font name="SansSerif Bold" size="24.0" />
                </font>
             </Label>
-            <Pane layoutX="373.0" layoutY="473.0" prefHeight="178.0" prefWidth="242.0" style="-fx-background-color: #fff; -fx-background-radius: 10;">
+            <Pane layoutX="353.0" layoutY="473.0" prefHeight="178.0" prefWidth="242.0" style="-fx-background-color: #fff; -fx-background-radius: 10;">
                <children>
                   <Label layoutX="14.0" layoutY="14.0" text="Oteller">
                      <font>
@@ -77,15 +88,4 @@
          </children>
       </AnchorPane>
    </center>
-   <left>
-      <AnchorPane style="-fx-background-color: #fff;" BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fitHeight="720.0" fitWidth="713.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <image>
-                  <Image url="@../../../../Desktop/TourismAgency/src/Icons/sdf.jpg" />
-               </image>
-            </ImageView>
-         </children>
-      </AnchorPane>
-   </left>
 </BorderPane>
